update some texts

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -7,7 +7,7 @@
         <h3>Add a Note</h3>
         <form method="POST" action="{{ url_for('views.home') }}">
             <div class="form-group">
-                <textarea name="note" id="note" class="form-control" placeholder="Write what you have in mind..." rows="4"></textarea>
+                <textarea name="note" id="note" class="form-control" placeholder="Write here" rows="4"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Add Note</button>
         </form>
